deleting get delivery by id controller
